--- a/Web_Development_Projects/Blog/templates/post.html
+++ b/Web_Development_Projects/Blog/templates/post.html
@@ -1,31 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<title>Title</title>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Raleway"
-			rel="stylesheet"
-		/>
-		<link
-			rel="stylesheet"
-			href="{{ url_for('static', filename='css/styles.css') }}"
-		/>
-	</head>
-	<body>
-		<div class="wrapper">
-			<div class="top">
-				<div class="title"><h1>{{ post.title }}</h1></div>
-			</div>
-			<div class="content">
-				<div class="card">
-					<h2>{{ post.subtitle }}</h2>
-					<p>{{ post.body }}</p>
-				</div>
-			</div>
-		</div>
-	</body>
-	<footer>
-		<p>Made with ♥️.</p>
-	</footer>
-</html>
+{% extends "layout.html" %}
+<!-- Page Title-->
+{% block title %}Post{% endblock %}
+<!-- Page Header-->
+{% block header %}
+<div class="post-heading">
+	<h1>{{ post.title }}</h1>
+	<h2 class="subheading">{{ post.subtitle }}</h2>
+	<span class="meta">
+		Posted by
+		<a href="#!">{{ post.author }}</a>
+		on {{ date }}
+	</span>
+</div>
+{% endblock %}
+<!-- Post Content-->
+<article class="mb-4">
+	{% block content %} {{ post.body | safe }} {% endblock %}
+</article>
