--- a/Practice/WTF_Forms/templates/login.html
+++ b/Practice/WTF_Forms/templates/login.html
@@ -15,7 +15,7 @@
 {% block content %}
 <div class="container">
     <h1>Login</h1>
-    {{ render_form(form) }}
+    {{ render_form(form, novalidate=True) }}
 </div>
 
 {% endblock %}
