Removed some comments from CoffeeWifi project

--- a/Web_Development_Projects/CoffeeWifi/templates/base.html
+++ b/Web_Development_Projects/CoffeeWifi/templates/base.html
@@ -12,7 +12,7 @@
 		<!-- Bootstrap CSS -->
 		{{ bootstrap.load_css() }}
 
-		<!-- Core theme CSS (includes Bootstrap)-->
+		<!-- Core theme CSS-->
 		<link
 			rel="stylesheet"
 			href="{{ url_for('static', filename='css/styles.css') }}"
