Improved Blog project, implemented a sqlite database, added functionalities for adding, editing and deleting posts

--- a/Web_Development_Projects/Blog/templates/layout.html
+++ b/Web_Development_Projects/Blog/templates/layout.html
@@ -131,14 +131,14 @@
 							</li>
 						</ul>
 						<div class="small text-center text-muted fst-italic">
-							Copyright &copy; Your Website 2023
+							Copyright &copy; Brian Arriaga {{ share_data.year }}
 						</div>
 					</div>
 				</div>
 			</div>
 		</footer>
 		<!-- Bootstrap core JS-->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+		{{ bootstrap.load_js() }}
 		<!-- Core theme JS-->
 		<script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 	</body>
