--- a/Web_Development_Projects/Blog/templates/index.html
+++ b/Web_Development_Projects/Blog/templates/index.html
@@ -14,22 +14,28 @@
 {% block content %}
 <!-- Post preview-->
 {% for post in posts %}
-<div class="post-preview">
-	<a href="{{ url_for('post', post_id=post.id) }}">
-		<h2 class="post-title">{{ post.title }}</h2>
-		<h3 class="post-subtitle">{{ post.subtitle }}</h3>
-	</a>
-	<p class="post-meta">
-		Posted by
-		<a href="#!">{{ post.author }}</a>
-		on {{ date }}
-	</p>
+<div class="post-preview d-flex justify-content-between align-items-start">
+    <div>
+        <a href="{{ url_for('post', post_id=post.id) }}">
+            <h2 class="post-title">{{ post.title }}</h2>
+            <h3 class="post-subtitle">{{ post.subtitle }}</h3>
+        </a>
+        <p class="post-meta">
+            Posted by
+            <a href="#!">{{ post.author }}</a>
+            on {{ post.date }}
+        </p>
+    </div>
+    <!-- Delete Button -->
+    <a href="{{ url_for('delete_post', post_id=post.id) }}" class="btn btn-outline-danger btn-sm" onclick="return confirm('Are you sure you want to delete this post?');">
+        ✘
+    </a>
 </div>
 <!-- Divider-->
 <hr class="my-4" />
 {% endfor %}
 <!-- Pager-->
 <div class="d-flex justify-content-end mb-4">
-	<a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a>
+	<a class="btn btn-primary text-uppercase" href="{{ url_for('new_post') }}">Add New Post +</a>
 </div>
 {% endblock %}
