--- a/Web_Development_Projects/Blog/templates/post.html
+++ b/Web_Development_Projects/Blog/templates/post.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 <!-- Page Title-->
-{% block title %}Post{% endblock %}
+{% block title %}{{ post.title }}{% endblock %}
 <!-- Page Header-->
 {% block header %}
 <div class="post-heading">
@@ -9,11 +9,19 @@
 	<span class="meta">
 		Posted by
 		<a href="#!">{{ post.author }}</a>
-		on {{ date }}
+		on {{ post.date }}
 	</span>
 </div>
 {% endblock %}
 <!-- Post Content-->
 <article class="mb-4">
-	{% block content %} {{ post.body | safe }} {% endblock %}
+	{% block content %}
+	{{ post.body | safe }}
+
+	<!-- Pager-->
+	<div class="d-flex justify-content-end mb-4">
+		<a class="btn btn-primary text-uppercase" href="{{ url_for('edit_post', post_id=post.id) }}">Edit Post</a>
+	</div>
+
+	{% endblock %}
 </article>
