--- a/Web_Development_Projects/Blog/templates/post.html
+++ b/Web_Development_Projects/Blog/templates/post.html
@@ -79,12 +79,18 @@
 		<h5 class="card-header">Comments:</h5>
 		<div class="card-body">
 			{% for comment in post.comments %}
-			<div class="post-comment">
-				<img src="{{ comment.comment_author.email | gravatar }}" alt="user avatar" class="user-avatar">
+			<div class="post-comment d-flex justify-content-between align-items-start">
+				<img src="{{ gravatar_url(comment.comment_author.email) }}" alt="user avatar" class="user-avatar">
 				<div class="comment-content">
 					<p>{{ comment.text | safe }}</p>
 					<span class="comment-author">- {{ comment.comment_author.name }}</span>
 				</div>
+				<!-- Delete Button -->
+				{% if comment.comment_author.email==current_user.email %}
+				<a href="{{ url_for('delete_comment', comment_id=comment.id, post_id=post.id) }}" class="btn btn-outline-danger btn-sm" onclick="return confirm('Are you sure you want to delete this comment?');">
+					✘
+				</a>
+				{% endif %}
 			</div>
 			{% endfor %}
 		</div>
